beta: fixed adListing z-index

--- a/src/components/adDisplay/AdDisplayCard.css
+++ b/src/components/adDisplay/AdDisplayCard.css
@@ -32,6 +32,8 @@
     width: 30%;
     height: 100%;
     border-radius: 10px;
+
+    z-index: 0;
 }
 
 .col-1 img {
